A: JWT 기반 로그인 구현 및 Cascade 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,11 @@ spring:
   profiles:
     active: dev
 
+  # Disable Compatibility Verifier
+  cloud:
+    compatibility-verifier:
+      enabled: false
+
 resource:
   file:
     url: /resources/files
