--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1' // JSON 역직렬화
 	implementation 'org.springframework.boot:spring-boot-starter-quartz:2.7.5' // Quartz 스케줄러
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13' // HttpClient
+	implementation 'org.springframework.boot:spring-boot-starter-mail' // Email
 
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
@@ -39,7 +40,6 @@ dependencies {
 	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final' // Bean Validation
 	implementation 'javax.validation:validation-api:2.0.1.Final' // Bean Validation
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-
 
 	// OAuth
 	implementation 'org.springframework.boot:spring-boot-starter-security' // Spring Security
