--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-quartz:2.7.5' // Quartz 스케줄러
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13' // HttpClient
 	implementation 'org.springframework.boot:spring-boot-starter-mail' // Email
+	implementation group: 'commons-io', name: 'commons-io', version: '2.12.0' // 파일 I/O
+	implementation 'com.google.guava:guava:31.1-jre' // Google Guava
 
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
