--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail' // Email
 	implementation group: 'commons-io', name: 'commons-io', version: '2.12.0' // 파일 I/O
 	implementation 'com.google.guava:guava:31.1-jre' // Google Guava
+	implementation 'net.gpedro.integrations.slack:slack-webhook:1.4.0' // Slack Webhook
 
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
