*: 동물 분양 게시글 api 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,4 +30,4 @@ resource:
   file:
     url: /resources/files
     path: ${user.dir}/cloud
-    allow-extension: bmp,jpg,jpeg,png,gif
+    allow-extension: bmp,jpg,jpeg,png,gif,webp
