--- a/build.gradle
+++ b/build.gradle
@@ -16,45 +16,41 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator' // 모니터링
-	implementation 'org.springframework.boot:spring-boot-starter-web' // 웹 MVC
-	implementation 'org.springframework.boot:spring-boot-starter-validation' // 유효성 검사
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // 템플릿 엔진
-	developmentOnly 'org.springframework.boot:spring-boot-devtools' // 개발 도구
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-	compileOnly 'org.projectlombok:lombok' // 롬복
-	annotationProcessor 'org.projectlombok:lombok' // 롬복
-	implementation 'javax.xml.bind:jaxb-api:2.3.1' // XML 바인딩
-	implementation 'com.google.code.gson:gson:2.10.1' // JSON 라이브러리
-	implementation 'com.googlecode.json-simple:json-simple:1.1.1' // JSON 역직렬화
-	implementation 'org.springframework.boot:spring-boot-starter-quartz:2.7.5' // Quartz 스케줄러
-	implementation 'org.apache.httpcomponents:httpclient:4.5.13' // HttpClient
-	implementation 'org.springframework.boot:spring-boot-starter-mail' // Email
-	implementation group: 'commons-io', name: 'commons-io', version: '2.12.0' // 파일 I/O
-	implementation 'com.google.guava:guava:31.1-jre' // Google Guava
-	implementation 'net.gpedro.integrations.slack:slack-webhook:1.4.0' // Slack Webhook
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	implementation 'com.google.code.gson:gson:2.10.1'
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+	implementation 'org.springframework.boot:spring-boot-starter-quartz:2.7.5'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation group: 'commons-io', name: 'commons-io', version: '2.12.0'
+	implementation 'com.google.guava:guava:31.1-jre'
+	implementation 'net.gpedro.integrations.slack:slack-webhook:1.4.0'
 
-	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
 
-	// DB
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client' // MariaDB JDBC 드라이버
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // Spring Data JPA
-	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final' // Bean Validation
-	implementation 'javax.validation:validation-api:2.0.1.Final' // Bean Validation
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
-	// OAuth
-	implementation 'org.springframework.boot:spring-boot-starter-security' // Spring Security
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // OAuth 2.0 Client
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server' // OAuth 2.0 Resource Server
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // JWT 라이브러리
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5' // JWT 구현체
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JWT Jackson 모듈
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-	// Test
-	testImplementation 'org.springframework.boot:spring-boot-starter-test' // Spring Boot Test
-	testImplementation 'org.springframework.security:spring-security-test' // Spring Security Test
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 
 }
 
